devops/azure/chart/templates/authorization.yaml
# Copyright 2021 Schlumberger
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: wellbore-jwt-authz
  namespace: osdu
spec:
  selector:
    matchLabels:
      app: osdu-gitlab-wellbore-domain-services
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
      to:
        - operation:
            notPaths: ["/","*/index.html",
                       "*/v2/api-docs",
                       "*/swagger","*/swagger-resources","*/swagger-ui.html",
                       "*/actuator/health", "*/health",
                       "*/configuration/ui","*/configuration/security",
                       "/api/os-wellbore-ddms/swagger-resources/*",
                       "/api/os-wellbore-ddms/*",
                       "/api/os-wellbore-ddms/webjars/*"]
